[package]
name = "blimp_ground_ws_interface"
version = "1.0.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
postcard = { version = "1.0.10", features = ["use-std"] }
serde = { version = "1.0.215", features = ["default", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
phf = { version = "0.11.3", features = ["macros"] }
